--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -1610,6 +1610,7 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
+                        app:cardElevation="0dp"
                         android:layout_height="wrap_content">
 
                         <LinearLayout
