Following issues resolved 1. RAD-4044: [Android][QA][Article]Missing Shadow for Bottom Action Panel (Like & Share Buttons) 2. RAD-3992: [Android][QA][Explore]Category screen missing after tapping "Explore" in Explore section modules 3. RAD-3991: [Android][QA][Explore]Incorrect "Explore More" text color in SleepRight module 4. RAD-3988: [Android][QA][Explore]Incorrect icon color for MoveRight module in Explore section 5. RAD-4070: Android || QA || Context screen || snap meal context screen - screen background color is not showing as displayed in xd design Also gap showing icon and description 6. RAD-4068: Android || QA || Context screen || Lifestyle & Nutrition Assessment - icons of descriptions are truncated. 7. RAD-4066: Android || QA || Context screen || Face scan context screen gap is displaying between icons and description 8. RAD-4056: Android || QA || Breathing || tapping on i button instruction screen is not appearing. 9. RAD-4053: Android || QA || Breathing || tapping on some breathing cards instruction screen is opening. 10. RAD-4040: [Android][PROD][Article]Back Button CTA Too Small in Article Screen 11. RAD-4025: Android || QA || Breathing || bookmark UI is not proper not showing as per xd design. 12. RAD-4036: Android || QA || Breathing || bookmark button is missing on session screen.

--- a/app/src/main/res/layout/activity_breathwork_session.xml
+++ b/app/src/main/res/layout/activity_breathwork_session.xml
@@ -21,12 +21,12 @@
 
         <ImageView
             android:id="@+id/ivPlus"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_breathing_toolkit"
-            android:visibility="gone" />
+            android:src="@drawable/ic_save_article"
+            android:visibility="visible" />
     </RelativeLayout>
 
     <LinearLayout
