--- a/app/src/main/res/layout/activity_facescan_context_screen.xml
+++ b/app/src/main/res/layout/activity_facescan_context_screen.xml
@@ -64,7 +64,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
+                    android:layout_marginVertical="12dp"
+                    android:layout_marginStart="12dp"
                     android:src="@drawable/fs_cs1" />
 
                 <TextView
@@ -88,7 +89,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
+                    android:layout_marginVertical="12dp"
+                    android:layout_marginStart="12dp"
                     android:src="@drawable/fs_cs2"/>
 
                 <TextView
@@ -112,7 +114,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
+                    android:layout_marginVertical="12dp"
+                    android:layout_marginStart="12dp"
                     android:src="@drawable/fs_cs3"/>
 
                 <TextView
