--- a/app/src/main/res/layout/activity_mealscan_context_screen.xml
+++ b/app/src/main/res/layout/activity_mealscan_context_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradient_bg_ma">
+    android:background="@drawable/gradient_bg_ms">
 
     <!-- Back Arrow and Title -->
     <LinearLayout
@@ -64,7 +64,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
+                    android:layout_marginVertical="12dp"
+                    android:layout_marginStart="12dp"
                     android:src="@drawable/ms_cs1" />
 
                 <TextView
@@ -88,7 +89,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
+                    android:layout_marginVertical="12dp"
+                    android:layout_marginStart="12dp"
                     android:src="@drawable/ms_cs2"/>
 
                 <TextView
