--- a/app/src/main/res/layout/activity_mrer_assessment_context_screen.xml
+++ b/app/src/main/res/layout/activity_mrer_assessment_context_screen.xml
@@ -41,7 +41,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="12dp"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@drawable/mr_er1" />
 
                 <LinearLayout
@@ -81,7 +81,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="12dp"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@drawable/mr_er2" />
 
                 <LinearLayout
@@ -121,7 +121,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="12dp"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@drawable/mr_er3" />
 
                 <LinearLayout
@@ -161,7 +161,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="12dp"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@drawable/mr_er4" />
 
                 <LinearLayout
