--- a/app/src/main/res/layout/row_subscription_history.xml
+++ b/app/src/main/res/layout/row_subscription_history.xml
@@ -55,6 +55,8 @@
             android:layout_marginVertical="8dp"
             android:fontFamily="@font/dmsans_bold"
             android:textColor="@color/txt_color_mind"
+            android:layout_toStartOf="@+id/tvCurrentPlan"
+            android:layout_alignParentStart="true"
             android:textSize="16sp" />
 
         <TextView
