fixed jira and sync bugs

--- a/app/src/main/res/layout/fragment_rating_report_feedback_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_rating_report_feedback_bottom_sheet.xml
@@ -13,7 +13,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
-        android:src="@drawable/ic_close_black"
+        android:src="@drawable/close_breathwork"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
     </ImageView>
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="How did we do?"
-            android:textColor="@color/black_no_meals"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:fontFamily="@font/merriweather_bold"
             android:layout_marginTop="30dp"
@@ -45,12 +45,12 @@
             android:id="@+id/tvRateDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rate this report so we can keep improving your health report.Your feedbacks helps us learn faster!"
+            android:text="Rate this report so we can keep improving your health report.Your feedbacks helps us learn faster."
             android:gravity="center"
-            android:textColor="@color/black_no_meals"
+            android:textColor="@color/black"
             android:textSize="18sp"
             android:minLines="3"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/dmsans_regular"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
