--- a/app/src/main/res/layout/fragment_rating_snap_meal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_rating_snap_meal_bottom_sheet.xml
@@ -13,7 +13,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
-        android:src="@drawable/ic_close_black"
+        android:src="@drawable/close_breathwork"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
     </ImageView>
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="How did we do?"
-            android:textColor="@color/black_no_meals"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:fontFamily="@font/merriweather_bold"
             android:layout_marginTop="30dp"
@@ -44,12 +44,12 @@
             android:id="@+id/tv_delete_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rate this scan so we can keep improving your meal insights.Your feedback help us learn faster!"
+            android:text="Rate this scan so we can keep improving your meal insights.Your feedback helps us learn faster."
             android:gravity="center"
-            android:textColor="@color/black_no_meals"
+            android:textColor="@color/black"
             android:textSize="18sp"
             android:minLines="3"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/dmsans_regular"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
@@ -171,9 +171,9 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:textSize="20sp"
-                    android:textColor="@color/black_no_meals"
+                    android:textColor="@color/black"
                     android:fontFamily="@font/dmsans_bold"
-                    android:text="Not now"/>
+                    android:text="Cancel"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
