--- a/app/src/main/res/layout/activity_breathwork_practice.xml
+++ b/app/src/main/res/layout/activity_breathwork_practice.xml
@@ -10,123 +10,126 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:background="@color/white"
-        >
-    <!-- Back Button -->
-    <ImageButton
-        android:id="@+id/backButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/icon_back"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="1dp"/>
+        android:background="@color/white">
+        <!-- Back Button -->
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/icon_back"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="1dp" />
 
-    <!-- Set Indicator and Timer -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp">
-
-        <TextView
-            android:id="@+id/setIndicator"
+        <!-- Set Indicator and Timer -->
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Set 1/3"
-            android:textSize="18sp"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp">
+
+            <TextView
+                android:id="@+id/setIndicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set 1/3"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/sessionTimer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="02:15"
+                android:layout_gravity="center_horizontal"
+                android:textSize="14sp"
+                android:textColor="@color/black" />
+
+        </LinearLayout>
+
+        <!-- Plus Button -->
+        <ImageButton
+            android:id="@+id/plusButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/breathing_plus_icon"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="16dp"
+            android:visibility="gone"
+            android:layout_marginEnd="8dp" />
+
+        <!-- Breathing Phase -->
+        <TextView
+            android:id="@+id/breathingPhase"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@+id/circleContainer"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+            android:text="Inhale"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black" />
 
-        <TextView
-            android:id="@+id/sessionTimer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="02:15"
-            android:layout_gravity="center_horizontal"
-            android:textSize="14sp"
-            android:textColor="@color/black"/>
-
-    </LinearLayout>
-
-    <!-- Plus Button -->
-    <ImageButton
-        android:id="@+id/plusButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/breathing_plus_icon"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"
-        android:layout_marginEnd="8dp"/>
-
-    <!-- Breathing Phase -->
-    <TextView
-        android:id="@+id/breathingPhase"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/circleContainer"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
-        android:text="Breath In"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
-
-    <!-- Animated Circle -->
-    <FrameLayout
-        android:id="@+id/circleContainer"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true">
-        <View
-            android:id="@+id/circleViewbase"
+        <!-- Animated Circle -->
+        <FrameLayout
+            android:id="@+id/circleContainer"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:layout_gravity="center"
-            android:background="@drawable/circle_shape"
-            android:backgroundTint="#F7E6B7"/>
-        <View
-            android:id="@+id/circleView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:background="@drawable/circle_shape"
-            android:backgroundTint="@color/medium_yellow"/>
+            android:layout_centerInParent="true">
 
-        <!-- Countdown Timer -->
-        <TextView
-            android:id="@+id/circleTimer"
+            <View
+                android:id="@+id/circleViewbase"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
+                android:background="@drawable/circle_shape"
+                android:backgroundTint="#F7E6B7" />
+
+            <View
+                android:id="@+id/circleView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:background="@drawable/circle_shape"
+                android:backgroundTint="@color/medium_yellow" />
+
+            <!-- Countdown Timer -->
+            <TextView
+                android:id="@+id/circleTimer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4"
+                android:textSize="30sp"
+                android:textColor="@color/black"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
+
+        <!-- Finish Early Button -->
+        <Button
+            android:id="@+id/finishEarlyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4"
-            android:textSize="30sp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"/>
-
-    </FrameLayout>
-
-    <!-- Finish Early Button -->
-    <Button
-        android:id="@+id/finishEarlyButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="finish early"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/text_color_app"
-        android:layout_marginBottom="32dp"/>
+            android:text="finish early"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/text_color_app"
+            android:layout_marginBottom="32dp" />
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/rl_prepare_main"
         android:visibility="gone"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/tv_prepare_Timer"
             android:layout_width="wrap_content"
@@ -136,7 +139,8 @@
             android:textSize="96sp"
             android:textColor="@color/black"
             android:fontFamily="@font/dmsans_semibold"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
+
         <TextView
             android:id="@+id/tv_prepare_message"
             android:layout_width="wrap_content"
@@ -148,7 +152,7 @@
             android:gravity="center"
             android:textColor="@color/black"
             android:fontFamily="@font/dmsans_semibold"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
     </RelativeLayout>
 
@@ -157,26 +161,33 @@
         android:id="@+id/rl_practice_complete"
         android:visibility="gone"
         android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/img_complete_tick"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/ic_checklist_complete"
-            android:layout_centerInParent="true"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center"/>
-        <TextView
-            android:id="@+id/tv_compete_message"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/img_complete_tick"
-            android:text="Breathing \nCycle \nCompleted"
+            android:orientation="vertical"
             android:layout_centerInParent="true"
-            android:textSize="32sp"
             android:gravity="center"
-            android:textColor="@color/black"
-            android:fontFamily="@font/dmsans_bold"
-            android:layout_gravity="center"/>
+            android:paddingBottom="70dp">
+
+            <ImageView
+                android:id="@+id/img_complete_tick"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/ic_checklist_complete"
+                android:scaleType="centerCrop" />
+
+            <TextView
+                android:id="@+id/tv_compete_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Breathing \nCycle \nCompleted"
+                android:textSize="32sp"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:fontFamily="@font/dmsans_bold"
+                android:layout_gravity="center" />
+        </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
