--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -294,6 +294,7 @@
     <color name="alternate_breathing_card_color_text">#984C01</color>
     <color name="four_seven_breathing_card_color_text">#4A2E3A</color>
     <color name="custom_breathing_card_color_text">#3B4A36</color>
+    <color name="dialog_status_bar">#883f49</color>
 
 
 </resources>
