--- a/app/src/main/res/layout/activity_ma_suggested_assessment.xml
+++ b/app/src/main/res/layout/activity_ma_suggested_assessment.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white">
 
@@ -82,23 +83,52 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp" />
 
-            <TextView
-                android:id="@+id/tv_curated"
+            <!-- More Like This Section -->
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:fontFamily="@font/dmsans_bold"
-                android:textSize="@dimen/textsize_large"
-                android:visibility="gone"
-                android:text="Curated for You" />
+                android:elevation="4dp"
+                android:visibility="visible"
+                android:background="@color/white"
+                android:id="@+id/lyt_recomended_card"
+                app:cardCornerRadius="10dp"
+                android:paddingBottom="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="15dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_curated"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal" />
+                    <TextView
+                        android:id="@+id/headerText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="12dp"
+                        android:text="You Might Also Like"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textColor="@color/txt_color_header"
+                        android:textSize="16sp"
+                        android:paddingBottom="8dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginHorizontal="2dp"
+                        android:background="@color/light_grey"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:padding="12dp"
+                        android:id="@+id/recommendationRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:clipToPadding="false"
+                        android:nestedScrollingEnabled="false"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </ScrollView>
