- Red Alert flag correct condition added

--- a/app/src/main/res/layout/activity_red_flag_alert.xml
+++ b/app/src/main/res/layout/activity_red_flag_alert.xml
@@ -34,7 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/llTopBar"
-        android:layout_above="@id/btnLogout">
+        android:layout_above="@id/btnImFine"
+        android:layout_marginVertical="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
