Following issues resolved 1. RAD-3996: [Android][QA][Explore]Promo banner thumbnails going out of screen in Explore section 2. RAD-3994: [Android][QA][Article/Video]Thumbnail goes out of screen when opening article/video in Explore section 3. RAD-4109: Android || QA || Dashboard-All Health Data>In health card data, 'Recommended For You' title is missing 4. RAD-3956: Android>Prod(1.1.11)>Mind Audit>Result is getting generated without last option(ans) select 5. RAD-3977: [Android]Add Haptic Feedback on Like Action in Article Section

--- a/app/src/main/res/layout/activity_maassessment_questions.xml
+++ b/app/src/main/res/layout/activity_maassessment_questions.xml
@@ -106,7 +106,7 @@
                 android:backgroundTint="@color/btn_color_journal"
                 android:textColor="@color/color_think_right"
                 android:fontFamily="@font/dmsans_bold"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:text="Submit" />
