--- a/app/src/main/res/layout/activity_facial_scan_report_details.xml
+++ b/app/src/main/res/layout/activity_facial_scan_report_details.xml
@@ -607,17 +607,42 @@
         </RelativeLayout>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewRecommended"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/headerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:text="Recommended For You"
+                android:fontFamily="@font/dmsans_bold"
+                android:textColor="@color/txt_color_header"
+                android:textSize="16sp"
+                android:paddingBottom="8dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/light_grey"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:id="@+id/recyclerViewContinue"
                 android:nestedScrollingEnabled="false"
                 android:layout_height="wrap_content" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
