--- a/app/src/main/res/drawable/score_outline_bg.xml
+++ b/app/src/main/res/drawable/score_outline_bg.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white"/>
-    <stroke android:width="2dp" android:color="#D9994C"/>
+    <solid android:color="@color/eatright_light_yellow"/>
+    <stroke android:width="1dp" android:color="#D9994C"/>
     <corners android:radius="20dp"/>
 </shape>
